fix:fixing some bugs and cleaning up code

--- a/localtrade-app-react-native/package.json
+++ b/localtrade-app-react-native/package.json
@@ -5,7 +5,8 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "commit": "cz"
   },
   "dependencies": {
     "@codler/react-native-keyboard-aware-scroll-view": "^1.0.1",
@@ -16,7 +17,7 @@
     "@react-navigation/native": "^5.9.3",
     "@react-navigation/stack": "^5.14.3",
     "buffer": "^6.0.3",
-    "expo": "~40.0.0",
+    "expo": "^40.0.1",
     "expo-constants": "^10.0.1",
     "expo-font": "~8.4.0",
     "expo-image-picker": "~9.2.0",
@@ -39,7 +40,14 @@
     "styled-components": "^5.2.1"
   },
   "devDependencies": {
-    "@babel/core": "~7.9.0"
+    "@babel/core": "~7.9.0",
+    "commitizen": "^4.2.3",
+    "cz-conventional-changelog": "^3.3.0"
   },
-  "private": true
+  "private": true,
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
+  }
 }
