--- a/localtrade-app-react-native/package.json
+++ b/localtrade-app-react-native/package.json
@@ -5,8 +5,7 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject",
-    "commit": "cz"
+    "eject": "expo eject"
   },
   "dependencies": {
     "@codler/react-native-keyboard-aware-scroll-view": "^1.0.1",
