--- a/localtrade-app-react-native/package.json
+++ b/localtrade-app-react-native/package.json
@@ -15,7 +15,9 @@
     "@react-navigation/bottom-tabs": "^5.11.8",
     "@react-navigation/native": "^5.9.3",
     "@react-navigation/stack": "^5.14.3",
+    "babel-plugin-inline-dotenv": "^1.6.0",
     "buffer": "^6.0.3",
+    "dotenv": "^8.2.0",
     "expo": "^40.0.1",
     "expo-constants": "^10.0.1",
     "expo-font": "~8.4.0",
@@ -29,8 +31,10 @@
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-aws3": "0.0.9",
+    "react-native-dotenv": "^2.5.3",
     "react-native-elements": "^3.2.0",
     "react-native-gesture-handler": "~1.8.0",
+    "react-native-paper": "^4.7.2",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.2",
