--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,5 @@
 PORT=3001
+ORIGIN=http://localhost:19006
 DB_PORT=27017
 SECRET_KEY=secretsecretkey
 DB_CONNECTION_URI=postgres://postgres:password@localhost:5432/localTradeUsers
