--- a/server/package.json
+++ b/server/package.json
@@ -15,11 +15,13 @@
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-validator": "^6.10.0",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.5.1",
     "pg-hstore": "^2.3.3",
     "postgres": "^1.0.2",
-    "sequelize": "^6.5.0"
+    "sequelize": "^6.5.0",
+    "validator": "^10.11.0"
   },
   "devDependencies": {
     "dotenv": "^8.2.0",
